src/assets/styles/style.scss
@import 'reset';
@import 'mixin';
@import 'var';

html {
  scroll-behavior: smooth;
}

body {
  font-family: 'Raleway', sans-serif;
}

.main-container {
  max-width: 1200px;
  padding: 0 15px;
  margin: 0 auto;
  @media only screen and (max-width: 1024px) {
    padding: 0 20px;
  }
}

.header {
  width: 100%;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1;
  @media only screen and (max-width: 767px) {
    padding: 19px 0;
  }

  &__container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    @media only screen and (max-width: 767px) {
      padding-right: 35px;
    }

    &::after {
      content: "";
      position: absolute;
      border-top: 1px solid $line-color;
      bottom: 0px;
      left: 50%;
      transform: translateX(-50%);
      max-width: 1170px;
      width: calc(100% - 30px);
      @media only screen and (max-width: 1024px) {
        width: calc(100% - 40px);
      }
      @media only screen and (max-width: 767px) {
        display: none;
      }
    }
  }

  &__logo {
    display: flex;

    & svg {
      width: 184px;
      height: 27px;
      @media only screen and (max-width: 767px) {
        height: 100%;
        width: 100%;
        max-width: 103.472px;
      }
    }
  }

  &__nav {
    @media only screen and (max-width: 767px) {
      display: none;
    }
  }

  &__toggle-menu {
    display: none;
    @media only screen and (max-width: 767px) {
      display: flex;
      align-items: center;
    }
  }

  &__list {
    display: flex;
    @media only screen and (max-width: 767px) {
      display: none;
    }
  }

  &__list-item {
    list-style: none;
    flex: 1 1 auto;
  }

  &__link {
    @include font($main-font-color, 13px, 700, 15px);
    text-decoration: none;
    text-align: center;
    text-transform: uppercase;
    display: block;
    padding: 41px 0;
    border-bottom: 3px solid $hidden-line-color;
    position: relative;
    z-index: 2;
    min-width: 134px;

    &:hover {
      border-bottom: 3px solid $line-color;
    }
  
    &:active {
      color: $accent-color;
      border-bottom: 3px solid $accent-color;
    }

    @media only screen and (max-width: 1024px) {
      min-width: 112px;
    }
    @media only screen and (max-width: 850px) {
      min-width: 100px;
    }
  }
}

.banner {
  background: url(/src/assets/media/banner.jpg);
  background-size: cover;
  background-position: center;
  margin: 0 auto 116px;
  position: relative;
  padding: 230px 0 120px;
  @media only screen and (max-width: 1024px) {
    padding: 257px 0 126px;
    margin-bottom: 78px;
  }
  @media only screen and (max-width: 767px) {
    padding: 106px 0 52px;
    margin-bottom: 40px;
  }

  &::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    opacity: 0.8;
    background-color: $background-color;
  }
  
  &__container {
    position: relative;
    text-align: center;
  }
  
  &__title {
    @include font($main-font-color, 64px, 900, 75px);
    text-transform: uppercase;
    margin-bottom: 31.43px;
    @media only screen and (max-width: 1024px) {
      font-size: 48px;
      line-height: 56px;
      margin-bottom: 61.86px;
    }
    @media only screen and (max-width: 767px) {
      font-size: 36px;
      line-height: 42px;
      margin-bottom: 32.71px;
    }
  }
  
  &__description {
    @include font($main-font-color, 24px, 400, 28px);
    margin-bottom: 79.57px;
    @media only screen and (max-width: 1024px) {
      font-size: 18px;
      line-height: 21px;
      margin-bottom: 89.14px;
    }
    @media only screen and (max-width: 767px) {
      font-size: 14px;
      line-height: 16.44px;
      margin-bottom: 49.29px;
    }
  }
}
  
.button {
  @include font($main-font-color, 24px, 900, 28px);
  text-transform: uppercase;
  background-color: $btn-color;
  border: 1px solid $btn-color;
  max-width: 370px;
  width: 100%;
  padding: 25px;
  cursor: pointer;
  @media only screen and (max-width: 1024px) {
    max-width: 314px;
    padding: 25px;
  }
  @media only screen and (max-width: 767px) {
    max-width: 100%;
    padding: 15px;
  }

  &:active {
    background-color: $btn-color;
    box-shadow: 4px 4px 30px 0px $btn-color;
  }

  &:hover {
    background-color: $accent-color;
    border: 1px solid $accent-color;
  }
}

.features {
  margin-bottom: 116px;
  @media only screen and (max-width: 1024px) {
    margin-bottom: 80.11px;
  }
  @media only screen and (max-width: 767px) {
    margin-bottom: 34.85px;
  }
}

.features__container {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  column-gap: 29px;
  row-gap: 89px;
  @media only screen and (max-width: 1024px) {
    column-gap: 20px;
    row-gap: 49px;
  }
  @media only screen and (max-width: 767px) {
    display: flex;
    flex-direction: column;
    column-gap: 41.47px;
  }
}

.feature {
  text-align: center;

  &__wrapper-icon {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    width: 100px;
    height: 100px;
    margin-bottom: 29px;
    @media only screen and (max-width: 1024px) {
      margin-bottom: 24px;
      width: 85px;
      height: 85px;
    }
    @media only screen and (max-width: 767px) {
      margin-bottom: 21px;
      width: 75px;
      height: 75px;
    }

    svg {
      width: 100%;
      height: 100%;
    }
  }

  &__title {
    @include font($feature-title-color, 24px, 900, 28px);
    text-transform: uppercase;
    margin-bottom: 20.43px;
    @media only screen and (max-width: 1024px) {
      margin-bottom: 3.95px;
      font-size: 18px;
      line-height: 21px;
    }
  }

  &__description {
    @include font($feature-description-color, 18px, 400, 21px);
    @media only screen and (max-width: 1024px) {
      font-size: 14px;
      line-height: 16px;
    }
    @media only screen and (max-width: 767px) {
      margin-bottom: 0;
    }
  }
}

.work {
  margin-bottom: 116px;
  @media only screen and (max-width: 1024px) {
    margin-bottom: 80.11px;
  }
  @media only screen and (max-width: 767px) {
    margin-bottom: 34.85px;
  }
}

.work__container {
  display: grid;
  max-width: 100%;
  margin: 0;
  padding: 0;
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows: repeat(2, 1fr);
  gap: 2px;
  @media only screen and (max-width: 767px) {
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(4, 1fr);
  }
}

.project {
  position: relative;
  aspect-ratio: 378/340;

  &__wrapper-image {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
  }

  &__image {
    width: 100%;
    height: 100%;
  }

  &__info {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    opacity: 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    &:hover {
      opacity: 1;
      background: $gradient-hover;
    }
    &:active {
      opacity: 1;
      background: $gradient-active;
    }
  }

  &__title {
    @include font($main-font-color, 24px, 900, 28px);
    text-transform: uppercase;
    margin-bottom: 40px;
    @media only screen and (max-width: 1024px) {
      margin-bottom: 24px;
      font-size: 18px;
      line-height: 21px;
    }
    @media only screen and (max-width: 767px) {
      margin-bottom: 8px;
    }
  }

  &__description {
    @include font($main-font-color, 18px, 400, 21px);
    @media only screen and (max-width: 1024px) {
      font-size: 14px;
      line-height: 16px;
    }
    @media only screen and (max-width: 767px) {
      margin-bottom: 0;
    }
  }
}

